<resources>
    <string name="app_name">Habits Tracker</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="priority">Priority</string>
    <string name="periodicity">Periodicity</string>
    <string name="everyday">Everyday</string>
    <string name="times_in">times in</string>
    <string name="days">days</string>
    <string name="save">save</string>
    <string name="invalid_value">Invalid value</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="menu_home">Home</string>
    <string name="menu_info">Info</string>
    <string name="menu_editor">Editor</string>
    <string name="good_habits">good habits</string>
    <string name="bad_habits">bad habits</string>
    <string name="error_too_short">Too short</string>
    <string name="error_too_long">Too long</string>
    <string name="card_create_button">card create button</string>
    <string name="bottom_sheet_peek">Sorts and filters</string>
    <string name="search_bar_hint">Search</string>
    <string name="arrow_down">arrow_down</string>
    <string name="arrow_up">arrow_up</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="delete">delete</string>
    <string name="failed_update">Failed update</string>
    <string name="avatar">avatar</string>
    <string name="done_button">done</string>
    <plurals name="still_need_to_be_done">
        <item quantity="other">Need to be done %1$d more times</item>
    </plurals>
    <string name="breathtaking">You are breathtaking!</string>
    <string name="stop_it">Stop doing it!</string>
    <string name="card_color">card color</string>
    <string name="color_picker_title">Color picker</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="yes">yes</string>
    <string name="deletion">Deletion</string>
    <string name="deletion_message">Sure you want to delete the habit?</string>
    <string name="link">Githab repository <a href="https://github.com/SofiSheromova/HabitTracker">link</a></string>
    <string name="app_version">Version: %1$s</string>
    <string name="avatarLink" translatable="false">https://data.whicdn.com/images/327972713/original.jpg</string>

    <plurals name="can_be_done">
        <item quantity="other">Can be done %1$d more times</item>
    </plurals>
    <plurals name="times_in">
        <item quantity="other">%1$d times in</item>
    </plurals>
    <plurals name="days">
        <item quantity="other">%1$d days</item>
    </plurals>

    <string-array name="priorities">
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
    </string-array>
</resources>