<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.domain.model.Type" />

        <variable
            name="viewModel"
            type="com.example.habittracker.ui.editor.EditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.editor.EditorFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/title_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/title_edit"
                    android:text="@string/title"
                    app:drawableEndCompat="@drawable/round_priority_high_20" />

                <EditText
                    android:id="@+id/title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/editor_field_spacing"
                    android:autofillHints="title"
                    android:inputType="text"
                    android:text="@={viewModel.editor.title}"
                    app:error="@{viewModel.editor.titleError}"
                    app:onFocus="@{viewModel.onFocusTitle}" />

                <TextView
                    android:id="@+id/description_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/description_edit"
                    android:text="@string/description"
                    app:drawableEndCompat="@drawable/round_priority_high_20" />

                <EditText
                    android:id="@+id/description_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/editor_field_spacing"
                    android:autofillHints="description"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@={viewModel.editor.description}"
                    app:error="@{viewModel.editor.descriptionError}"
                    app:onFocus="@{viewModel.onFocusDescription}" />

                <TextView
                    android:id="@+id/type_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <RadioGroup
                    android:id="@+id/type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/editor_field_spacing">

                    <RadioButton
                        android:id="@+id/radio_good"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.editor.type == Type.GOOD}"
                        android:onClick="@{() -> viewModel.editor.setGoodType()}"
                        android:text="@string/good" />

                    <RadioButton
                        android:id="@+id/radio_bad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.editor.type == Type.BAD}"
                        android:onClick="@{() -> viewModel.editor.setBadType()}"
                        android:text="@string/bad" />
                </RadioGroup>

                <TextView
                    android:id="@+id/priority_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/editor_field_spacing"
                    android:layout_marginBottom="@dimen/editor_field_spacing"
                    android:background="@drawable/field_border"
                    android:padding="@dimen/bordered_field_padding">

                    <Spinner
                        android:id="@+id/priority_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/priorities"
                        android:selectedItemPosition="@{viewModel.editor.priority.value}" />

                </FrameLayout>

                <TextView
                    android:id="@+id/periodicity_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/periodicity"
                    app:drawableEndCompat="@drawable/round_priority_high_20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/editor_field_spacing"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/repetitions_number_edit"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.editor.repetitionsNumber}"
                        app:error="@{viewModel.editor.repetitionsNumberError}"
                        app:onFocus="@{viewModel.onFocusRepetitionsNumber}"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/repetitions_number_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/times_in" />

                    <EditText
                        android:id="@+id/days_number_edit"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.editor.daysNumber}"
                        app:error="@{viewModel.editor.daysNumberError}"
                        app:onFocus="@{viewModel.onFocusDaysNumber}"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/days_number_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/days" />

                </LinearLayout>

                <TextView
                    android:id="@+id/color_widget_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <LinearLayout
                    android:id="@+id/color_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/editor_field_spacing"
                    android:layout_marginBottom="@dimen/editor_field_spacing"
                    android:background="@drawable/field_border"
                    android:gravity="center"
                    android:padding="@dimen/bordered_field_padding">

                    <ImageView
                        android:id="@+id/selected_color"
                        android:layout_width="@dimen/color_widget_selected_color_size"
                        android:layout_height="@dimen/color_widget_selected_color_size"
                        android:contentDescription="@string/card_color"
                        android:src="@drawable/solid_circle"
                        app:tint="@{viewModel.editor.color}" />

                    <ImageView
                        android:layout_width="@dimen/color_widget_arrow_size"
                        android:layout_height="@dimen/color_widget_arrow_size"
                        android:contentDescription="@string/arrow_down"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/editor_field_spacing">

                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="@{viewModel.editor.valid}"
                        android:onClick="@{(view) -> viewModel.onSave()}"
                        android:text="@string/save"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_state_delete_button"
                        android:enabled="@{viewModel.cardExists}"
                        android:text="@string/delete"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>