<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="false"
            android:padding="10dp">

            <ImageView
                android:id="@+id/like_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_like_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/editTextColor"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/dislike_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:rotationX="180"
                android:src="@drawable/ic_like_20"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/textColor"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/title"
                android:textSize="@dimen/h2"
                app:layout_constraintStart_toEndOf="@id/like_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:textSize="@dimen/h4"
                android:text="@string/description"
                app:layout_constraintEnd_toStartOf="@id/card_priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <ImageView
                android:id="@+id/repeat_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:src="@drawable/ic_baseline_repeat_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_description"
                app:tint="@color/textColor"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/card_periodicity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/h4"
                android:layout_marginTop="7dp"
                android:padding="2dp"
                android:text="@string/everyday"
                app:layout_constraintStart_toEndOf="@id/repeat_icon"
                app:layout_constraintTop_toBottomOf="@id/card_description" />

            <TextView
                android:id="@+id/card_priority"
                android:layout_width="35sp"
                android:layout_height="35dp"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                app:layout_constraintTop_toBottomOf="@id/card_description"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/done_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/done_button"
                android:textColor="@color/textColor"
                app:cornerRadius="14dp"
                app:layout_constraintTop_toBottomOf="@id/card_priority"
                app:rippleColor="#14000000"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>